# Telemetry-Processor

./: .gitignore  CMakeLists.txt  README.md
Telemetry-Processor/: CMakeLists.txt  Logger.cpp  Logger.h  Sensor.cpp  Sensor.h  Telemetry-Processor.cpp  Telemetry-Processor.h  main.cpp
Telemetry-Processor/tests/: CMakeLists.txt  test_main.cpp
Telemetry-Processor/tests/Logger/: logger_tests.cpp
Telemetry-Processor/tests/Sensor/: sensor_tests.cpp
Telemetry-Processor/tests/TelPro/: telpro_tests.cpp
